Prevent FAQ overlap by adding top spacing for peaked header

--- a/assets/scss/pages/_front-page-faq.scss
+++ b/assets/scss/pages/_front-page-faq.scss
@@ -3,6 +3,7 @@
 .faq-section {
   position: relative;
   background: #051120;
+  margin-top: #{mixins.vw(120px)};
   padding: #{mixins.vw(112px)} 0 #{mixins.vw(96px)};
   overflow: visible;
 }
@@ -183,6 +184,7 @@
 
 @include mixins.mobile {
   .faq-section {
+    margin-top: #{mixins.mvw(70px)};
     padding: #{mixins.mvw(68px)} 0 #{mixins.mvw(64px)};
   }
 
